# online_bg_removal

./: .gitignore  README.md  background_remover.py.orig  background_remover.pyw  environment_gpu.yml  environment_linux64.yml  environment_other.yml  pixi.toml  pyproject.toml  requirements.txt  requirements_gpu.txt
.github/workflows/: tests.yml
config/: features.yaml
image_processing/: regionprops.py  tracker.py  trajectory_analysis.py
scripts/live/: background_remover.py
